03-Declarative/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-green
spec:
  selector:
    matchLabels:
      app: blue-green
  template:
    metadata:
      labels:
        app: blue-green
    spec:
      containers:
        - name: blue-green
          image: mtinside/blue-green:latest
