03-Declarative/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-green
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: blue-green
