03-Declarative/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dev.example.com
      http:
        paths:
          - path: /blue-green
            pathType: Prefix
            backend:
              service:
                name: blue-green
                port: 
                  number: 80
